--- a/src/card/Card.css
+++ b/src/card/Card.css
@@ -1,6 +1,6 @@
 .card__container {
-  width: 300px;
-  height: 120px;
+  width: 200px;
+  height: 180px;
   background-color: white;
   border-radius: 20px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -10,7 +10,7 @@
 .card__container-title {
     display: flex;
     justify-content: space-around;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
     align-content: center;
 }
